modified:   tsconfig.json 	new file:   tsconfig.node.tsbuildinfo 	modified:   tsconfig.tsbuildinfo 	new file:   vite.config.d.ts 	new file:   vite.config.js 	modified:   yarn.lock

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,12 @@
     "strict": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "src/App.tsx",
+    "src/TestRunner.tsx"
+  ],
+  "references": [
+    { "path": "./tsconfig.node.json" }
+  ]
 }
