new file:   .nvmrc 	modified:   README.md 	new file:   index-stages.html 	modified:   package-lock.json 	modified:   package.json 	new file:   src/entry-stages.tsx 	modified:   tsconfig.json 	modified:   tsconfig.node.tsbuildinfo 	modified:   vite.config.js 	modified:   vite.config.ts 	modified:   yarn.lock

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
   "include": ["src"],
   "exclude": [
     "src/App.tsx",
-    "src/TestRunner.tsx"
+    "src/TestRunner.tsx",
+    "src/entry-stages.tsx"
   ],
   "references": [
     { "path": "./tsconfig.node.json" }
