--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:stages": "vite --open /index-stages.html",
     "build": "tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chub-ai/stages-ts": "^0.5.2",
     "chrono-node": "^2.7.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -17,7 +19,11 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.2",
     "@vitejs/plugin-react": "^4.3.3",
+    "sass-embedded": "^1.97.1",
     "typescript": "^5.6.3",
     "vite": "^5.1.0"
+  },
+  "engines": {
+    "node": ">=24.2.0"
   }
 }
