--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:host": "vite --host 0.0.0.0 --port 5173",
     "dev:stages": "vite --open /index-stages.html",
+    "dev:stages:host": "vite --host 0.0.0.0 --port 5173 --open /index-stages.html",
     "build": "tsc -b && vite build",
     "preview": "vite preview"
   },
