modified:   public/chub_meta.yaml 	modified:   src/Stage.tsx 	modified:   src/main.tsx

--- a/public/chub_meta.yaml
+++ b/public/chub_meta.yaml
@@ -15,7 +15,7 @@ config_schema:
       default: false
     include_in_system_message:
       type: boolean
-      default: true
+      default: false
     prompt_block_label:
       type: string
       default: RP_STATE
