--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,11 +16,17 @@ jobs:
   build-and-upload:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: '21.7.1'
+          cache: 'yarn'
+
+      - name: Enable Corepack and Yarn 1
+        run: |
+          corepack enable
+          corepack prepare yarn@1.22.22 --activate
 
       - name: Confirm CHUB_AUTH_TOKEN is set
         env:
@@ -37,12 +43,14 @@ jobs:
           CHUB_AUTH_TOKEN: ${{ secrets.CHUB_AUTH_TOKEN }}
           STAGE_ID: ${{ secrets.STAGE_ID }}
         run: |
+          set -e
+          sudo apt-get update -y
           mkdir -p public/       
           touch public/chub_meta.yaml  
           if grep -q "^github_path:" public/chub_meta.yaml; then
             echo "Repo path already in metadata file."
           else
-            if ["${{ github.repository }}" == "CharHubAI/stage-template"]; then
+            if [ "${{ github.repository }}" = "CharHubAI/stage-template" ]; then
               echo "Not saving repo name for template project"
             else
               echo "Writing github path 'https://github.com/${{ github.repository }}' to metadata file."
@@ -58,14 +66,14 @@ jobs:
              echo "Secret STAGE_ID does not exist; attempting to read from file"
              STAGE_ID=$(grep '^extension_id:' public/chub_meta.yaml | cut -d ':' -f2 | tr -d " '\"")
              if [ "${STAGE_ID}" == ""  ]; then
-                if ["${{ github.repository }}" == "CharHubAI/stage-template"]; then
+               if [ "${{ github.repository }}" = "CharHubAI/stage-template" ]; then
                   echo "Not making ext id for template project"
                   STAGE_ID="extension-template-5523da8cf7de"
                 else
                   echo "Extension ID not present in public/chub_meta.yaml extension_id field either. Creating new project."
-                  sudo apt-get install jq
+                  sudo apt-get install -y jq
                   STAGE_ID=""
-                  curl -H "CH-API-KEY: ${{ secrets.CHUB_AUTH_TOKEN }}" -H "Content-Type: application/json" --request POST --data '{"name":"${{ github.event.repository.name }}"}'  https://api.chub.ai/extensions  -o creation.json
+                  curl -sS -H "CH-API-KEY: ${{ secrets.CHUB_AUTH_TOKEN }}" -H "Content-Type: application/json" --request POST --data "{\"name\":\"${{ github.event.repository.name }}\"}"  https://api.chub.ai/extensions  -o creation.json
                   STAGE_ID=$(jq -r '.id_v2' creation.json)
                   if [ "${STAGE_ID}" == "" ] || [ "${STAGE_ID}" == "null" ]; then
                     echo "Extension ID creation failed; is your CHUB_AUTH_TOKEN secret set for this project?"
@@ -88,23 +96,29 @@ jobs:
       - name: Char UUIDGen
         if: ${{ !contains(github.repository, 'template') }}
         run: |
-          sudo apt-get install uuid-runtime
-          for file in public/characters/*.yaml; do
-            if grep -q 'project_uuid:' "$file"; then
-              echo "project has uuid."
-            else
-              uuid=$(uuidgen)
-              echo -e "\nproject_uuid: $uuid\n" >> "$file"
-              echo "Added project_uuid to $file"
-              git config --local user.email "action@github.com"
-              git config --local user.name "GitHub Action"
-              git add $file
-              git commit -m "Add project_uuid to YAML file"
-              git push
-            fi
-          done
+          sudo apt-get install -y uuid-runtime
+          shopt -s nullglob
+          files=(public/characters/*.yaml)
+          if [ ${#files[@]} -eq 0 ]; then
+            echo "No character YAML files to update."
+          else
+            for file in "${files[@]}"; do
+              if grep -q 'project_uuid:' "$file"; then
+                echo "project has uuid in $file."
+              else
+                uuid=$(uuidgen)
+                echo -e "\nproject_uuid: $uuid\n" >> "$file"
+                echo "Added project_uuid to $file"
+                git config --local user.email "action@github.com"
+                git config --local user.name "GitHub Action"
+                git add "$file"
+                git commit -m "Add project_uuid to YAML file" || true
+                git push
+              fi
+            done
+          fi
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Build
         run: yarn build
@@ -117,7 +131,7 @@ jobs:
         env:
           CHUB_AUTH_TOKEN: ${{ secrets.CHUB_AUTH_TOKEN }}
         run: |    
-          curl -H "CH-API-KEY: ${{ secrets.CHUB_AUTH_TOKEN }}" -F "file=@build.zip" https://api.chub.ai/extension/${{ env.STAGE_ID }}/upload
+          curl -sS -H "CH-API-KEY: ${{ secrets.CHUB_AUTH_TOKEN }}" -F "file=@build.zip" https://api.chub.ai/extension/${{ env.STAGE_ID }}/upload
 
       - name: Setup .npmrc
         env:
@@ -131,11 +145,14 @@ jobs:
       - name: Extract version from tag
         id: get_version
         if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
-        run: echo "::set-output name=VERSION::${GITHUB_REF#refs/tags/v}"
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
         # Assumes tag is of form v1.0.0, strips the 'v'
 
       - name: Update package.json version
-        run: yarn build --mode lib && yarn version --new-version ${{ steps.get_version.outputs.VERSION }} --no-git-tag-version && yarn publish --access public
+        run: |
+          yarn build --mode lib
+          yarn version --new-version ${{ steps.get_version.outputs.VERSION }} --no-git-tag-version
+          yarn publish --access public
         if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
