--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev:host": "vite --host 0.0.0.0 --port 5173",
     "dev:stages": "vite --open /index-harness.html",
     "dev:stages:host": "vite --host 0.0.0.0 --port 5173 --open /index-harness.html",
+    "dev:tests": "vite --open /test-harness.html",
+    "preview:host": "vite preview --host",
     "dev:chat": "vite --mode staging",
     "dev:chat:host": "vite --host 0.0.0.0 --port 5173 --mode staging",
     "build": "tsc -b && vite build",
