--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:stages": "vite --open /index-harness.html",
     "dev:stages:host": "vite --host 0.0.0.0 --port 5173 --open /index-harness.html",
     "dev:tests": "vite --open /test-harness.html",
+    "dev:batch": "vite --open /batch-tests.html",
     "preview:host": "vite preview --host",
     "dev:chat": "vite --mode staging",
     "dev:chat:host": "vite --host 0.0.0.0 --port 5173 --mode staging",
